Refactor: removing dnsutils. Updating JAVA OPTS.